--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -4,7 +4,8 @@ docs_dir: pages
 
 nav:
   - 索引: index.md
-  - 2025年1月: 00.md
+  - 2025年1月31日 方 Robin: 00.md
+  - 2025年1月31日 方 HuiZhen: 01.md
 
 theme:
   name: material
