--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -6,6 +6,7 @@ nav:
   - 索引: index.md
   - 2025年1月31日 方 Robin: 00.md
   - 2025年1月31日 方 HuiZhen: 01.md
+  - 2025年2月1日 方 Robin: 02.md
 
 theme:
   name: material
