--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -7,6 +7,7 @@ nav:
   - 2025年1月31日 方 Robin: 00.md
   - 2025年1月31日 方 HuiZhen: 01.md
   - 2025年2月2日 方 Robin: 02.md
+  - 2025年2月2日 方 HuiZhen: 03.md
 
 theme:
   name: material
