--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -14,6 +14,9 @@ nav:
   - 2025年3月16日 方 Robin: 06.md
   - 2025年3月17日 方 HuiZhen: 07.md
   - 2025年3月19日 方 Robin: 08.md
+  - 2025年3月19日 方 HuiZhen: 09.md
+  - 2025年3月26日 方 HuiZhen: 10.md
+  - 2025年4月17日 方 Robin: 11.md
 
 theme:
   name: material
