--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -17,6 +17,7 @@ nav:
   - 2025年3月19日 方 HuiZhen: 09.md
   - 2025年3月26日 方 HuiZhen: 10.md
   - 2025年4月17日 方 Robin: 11.md
+  - 2025年7月13日 方 Robin: 12.md
 
 theme:
   name: material
