--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -18,6 +18,9 @@ nav:
   - 2025年3月26日 方 HuiZhen: 10.md
   - 2025年4月17日 方 Robin: 11.md
   - 2025年7月13日 方 Robin: 12.md
+  - 2025年7月13日 方 HuiZhen: 13.md
+  - 2025年7月17日 方 HuiZhen: 14.md
+  - 2025年7月20日 方 Robin: 15.md
 
 theme:
   name: material
